tests/checker/fail/literal_dispatch_unsorted.can
Routed = (String) => String {
    String -> (
        * "/b" => String { "b" }
        * "/a" => String { "a" }
        * String => String { "other" }
    )
}

Unit => Program {
    "/a" -> Routed -> Print
}
